Update Week 1 Assignment.ipynb

--- a/Week 1 Assignment.ipynb
+++ b/Week 1 Assignment.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "## Coursera Machine Learning for Data Analysis\n",
-    "### Week 1 Assignment"
+    "### Week_1_Assignment"
    ]
   },
   {
